tests/invalid/dquote-not-closed-and-ml-str-literal.cipl
int main() {
    writeln("invalid
    literal"
    );

    writeln("only single line");
    "not closed
}
"